syntax = "proto3";

import "types/types.proto";

package uopool;

message AddRequest {
    types.UserOperation uo = 1;
    types.H160 ep = 2;
}

enum AddResult {
    ADDED = 0;
    NOT_ADDED = 1;
}

message AddResponse {
    AddResult result = 1;
    string data = 2;
}

message RemoveRequest {
    types.H256 hash = 1;
}

enum RemoveResult {
    REMOVED = 0;
    NOT_REMOVED = 1;
}

message RemoveResponse {
    RemoveResult result = 1;
}

enum GetAllResult {
    GOT_ALL = 0;
    NOT_GOT_ALL = 1;
}

message GetAllRequest {}

message GetAllResponse {
    GetAllResult result = 1;
    repeated types.UserOperation uos = 2;
}

enum ClearResult {
    CLEARED = 0;
    NOT_CLEARED = 1;
}

message ClearRequest {}

message ClearResponse {
    ClearResult result = 1;
}

service UoPool {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Remove(RemoveRequest) returns (RemoveResponse);
    rpc GetAll(GetAllRequest) returns (GetAllResponse);

    // debug
    rpc Clear(ClearRequest) returns (ClearResponse);
}
